--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,25 +1,26 @@
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
+    margin: 0px;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 1.5em;
 }
 
+p {
+    margin: 0px;
+    line-height: 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
 h1 {
-    margin: .5em;
+    margin-top: .5em;
     color: #ffffff;
+    padding: .1em;
 }
 
 a {
     text-decoration: none;
     color: #ffa500;
-}
-
-button {
-    border: 1px solid #ffffff;
-    height: 50px;
-    width: 100px;
-    font-family: 'Roboto', sans-serif;
-    margin: 2.5em;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 li {
@@ -31,7 +32,7 @@ li {
 }
 
 .header {
-    margin-top: -30px;
+    margin-top: -1.3em;
     width: 100%;
     height: auto;
     background-color: #ffa500;
@@ -39,7 +40,7 @@ li {
 }
 
 .left-column {
-    width: 50%;
+    width: 65%;
     height: 660px;
     float: left;
     background-color: #ffffff;
@@ -47,12 +48,11 @@ li {
 }
 
 .right-column {
-    width: 50%;
+    width: 35%;
     height: 655px;
     float: right;
     background-color: #ffffff;
     text-align: right;
-    margin-top: 5px;
 }
 
 .footer {
@@ -62,7 +62,7 @@ li {
     clear: left;
     margin-bottom: 0;
     width: 100%;
-    height: 200px;
+    height: auto;
     background-color: #ffa500;
     color: #ffffff;
     font-family: 'Oswald', sans-serif;
@@ -76,68 +76,15 @@ li {
 
 #linkedin {
     color: #ffffff;
+    margin: 20px;
 }
 
 #github {
     color: #ffffff;
+    margin: 20px;
 }
 
-
-/*a {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-button {
-  background-color: #ffa500;
-  border: 1px solid #ffffff;
-  height: 50px;
-  width: 100px;
-  font-family: 'Roboto',sans-serif;
-  margin: auto;
-}
-
-.name {
-  margin-left: 0px;
-  float: left;
-  background-color: #ffa500;
+#me {
+  width:auto;
   height: auto;
-  width: 300px;
-  color: #ffffff;
-}
-
-.header {
-    display: flex;
-    justify-content: flex-end;
-    height: 80px;
-    width: auto;
-    background-color: #ffa500;
-    margin: 0px;
-    color: #ffffff;
-    font-family: 'Oswald',sans-serif;
-}
-
-.footer {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    height: auto;
-    width: auto;
-    background-color: #ffa500;
-    margin-top: 10px;
-    color: #ffffff;
-    font-family: 'Roboto',sans-serif;
-}
-
-.me {
-    display: flex;
-    flex-flow: row;
-    height: auto;
-    width: auto;
-    justify-content: center;
-}
-
-#splash {
-    width: 100%;
-    height: auto;
 }
