--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -1,25 +1,29 @@
 /*Matthew Norbury - 16404219*/
 body {
     margin: 0px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 1.5em;
     line-height: 2em;
     text-align: center;
 }
 
 h1 {
-    text-align: left;
-    margin-top: .5em;
-    color: #ffffff;
-    padding: .1em;
-    width: auto;
+  color: #ffa500;
+  padding: 1.5em;
+  padding-bottom: 0em;
+  font-family: 'Oswald', sans-serif;
 }
 
 h2 {
-    color: #ffa500;
     font-family: 'Oswald', sans-serif;
     padding-left: 2em;
     padding-right: 2em;
+}
+
+h3 {
+  font-family: 'Oswald', sans-serif;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 p {
@@ -36,7 +40,7 @@ a {
 }
 
 .header {
-    margin-top: -25px;
+    margin-top: -57px;
     width: 100%;
     height: 85px;
     background-color: #ffa500;
@@ -60,6 +64,19 @@ a {
     top: 5px;
     left: 75%;
     position: fixed;
+}
+
+#title {
+    text-align: left;
+    margin-top: .5em;
+    color: #ffffff;
+    padding: .1em;
+    width: auto;
+}
+
+#email {
+  color: #ffa500;
+  text-decoration: underline;
 }
 
 .footer {
@@ -92,4 +109,10 @@ a {
     width: auto;
     height: auto;
     font-size: .7em;
+}
+
+#bowl {
+  width: 100%;
+  height: auto;
+  margin-bottom: -20px;
 }
