--- a/css/style-index.css
+++ b/css/style-index.css
@@ -1,60 +1,51 @@
 /*Matthew Norbury - 16404219*/
 body {
-    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    line-height: 2em;
+    text-align: center;
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.5em;
 }
 
-p {
-    margin: 0px;
-    line-height: 2em;
-    padding-left: 2em;
-    padding-right: 2em;
-}
-
-h1 {
-    margin-top: .5em;
-    color: #ffffff;
-    padding: .1em;
-    margin-bottom: .3em;
-}
-
 a {
-    text-decoration: none;
     color: #ffa500;
+    text-decoration: none;
     font-family: 'Ubuntu', sans-serif;
 }
 
-li {
-    list-style-type: none;
-    margin: 3em;
-    text-align: center;
-    width: auto;
-    height: auto;
-}
-
-.header {
-    margin-top: -1.3em;
-    width: 100%;
-    height: auto;
-    background-color: #ffa500;
+h1 {
+    color: #ffffff;
+    font-size: 2.5em;
+    line-height: 1em;
     font-family: 'Oswald', sans-serif;
 }
 
+li {
+    list-style: none;
+    padding: 1em;
+}
+
+.header {
+    background-color: #ffa500;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
+}
+
 .left-column {
-    width: 65%;
-    height: 660px;
-    float: left;
-    background-color: #ffffff;
+    padding: 1em;
     text-align: center;
 }
 
 .right-column {
-    width: 35%;
-    height: 655px;
-    float: right;
-    background-color: #ffffff;
-    text-align: right;
+    padding: 1em;
+    text-align: center;
 }
 
 .footer {
@@ -72,6 +63,7 @@ li {
 }
 
 #splash {
+    order: -2;
     width: 100%;
     height: auto;
 }
@@ -88,11 +80,59 @@ li {
     font-size: .7em;
 }
 
-#footdes {
-  font-size: .75em;
+#foot-des {
+    font-size: .75em;
 }
 
-#me {
-  width:auto;
-  height: auto;
+@media (max-width: 30em) {
+    .left-column {
+        flex: 1 0 auto;
+    }
+}
+
+@media (min-width: 30em) {
+    .header {
+        display: block;
+    }
+    .wrapper {
+        flex-direction: row;
+    }
+    .left-column {
+        flex: 1 1 auto;
+        width: 50%;
+    }
+    .right-column {
+        width: 50%;
+    }
+    .footer {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        clear: left;
+        margin-bottom: 0;
+        width: 100%;
+        height: auto;
+        background-color: #ffa500;
+        color: #ffffff;
+        font-family: 'Oswald', sans-serif;
+        text-align: center;
+    }
+    #splash {
+        order: -2;
+        width: 100%;
+        height: auto;
+    }
+    #linkedin {
+        color: #ffffff;
+        margin: 20px;
+        font-size: .7em;
+    }
+    #github {
+        color: #ffffff;
+        margin: 20px;
+        font-size: .7em;
+    }
+    #foot-des {
+        font-size: .75em;
+    }
 }
