--- a/css/style-cv.css
+++ b/css/style-cv.css
@@ -26,7 +26,7 @@ h2 {
   color: #ffffff;
   font-size: 2em;
   font-family: 'Oswald', sans-serif;
-  background: #ff0000;
+  background: #ffa500;
   padding: 25px;
 }
 
@@ -37,13 +37,13 @@ li {
 .links {
   display: flex;
   flex-flow: column;
-  background: #ffbaba;
+  background: #ffdc9c;
 }
 
 .name {
     order: -1;
     padding: 1em;
-    background-color: #ff0000;
+    background-color: #ffa500;
 }
 
 .wrapper-edu-course {
@@ -54,14 +54,14 @@ li {
 
 .edu {
     padding: 1em;
-    background: #ffbaba;
+    background: #ffdc9c;
     text-align: center;
 }
 
 .course {
     padding: 1em;
     text-align: center;
-    background: #ffbaba;
+    background: #ffdc9c;
 }
 
 .wrapper-exp-skills {
@@ -73,19 +73,19 @@ li {
 .exp {
     padding: 1em;
     text-align: center;
-    background: #ffbaba;
+    background: #ffdc9c;
 }
 
 .skills {
     padding: 1em;
     text-align: center;
-    background: #ffbaba;
+    background: #ffdc9c;
 }
 
 .act {
     padding: 1em;
     text-align: center;
-    background: #ffbaba;
+    background: #ffdc9c;
 }
 
 @media (max-width: 30em) {
