--- a/css/style-index.css
+++ b/css/style-index.css
@@ -53,7 +53,8 @@ li {
     flex-flow: column;
     align-items: center;
     clear: left;
-    margin-bottom: 0;
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: auto;
     background-color: #ffa500;
